[gd_scene load_steps=4 format=3 uid="uid://dnxveso6pmrkm"]

[ext_resource type="Script" path="res://Scenes/Player/energy_shield.gd" id="1_jdloq"]
[ext_resource type="Texture2D" uid="uid://drqqak00q7o8s" path="res://Graphics/player_energy_shield.png" id="1_rfm0c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7tfl7"]
radius = 15.0

[node name="EnergyShield" type="Area2D"]
collision_mask = 10
script = ExtResource("1_jdloq")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.235294)
texture = ExtResource("1_rfm0c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7tfl7")

[node name="RechargeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="RechargeTimer" to="." method="_on_recharge_timer_timeout"]
